stage0/tests/compile_fail/casts/non_numeric.dg
// `as` only converts between numeric scalars; casting a bool is rejected.
func main() -> i32 {
    let b = true
    b as i32
}
